--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
 	<title>Insaan Network!</title>
-	<meta name="GodPixel!" content="The First Season Of Insaan Network Is Out! Join Now! : mc.insaannetwork.cf">
-	<meta property="og:title" content="GodPixel Network - Best Minecraft Server">
+	<meta name="Insaan Network!" content="The First Season Of Insaan Network Is Out! Join Now! : mc.insaannetwork.cf">
+	<meta property="og:title" content="Insaan Network - Best Minecraft Server">
 	<meta property="og:site_name" content="Insaan Network">
 	<meta property="og:description" content="The First Season Of Insaan Network Is Out! Join Now! : mc.insaannetwork.cf">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
