--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 		<div class="items">
 			<!-- Replace # with your forum URL-->
-			<a href="https://discord.gg/" class="item forums">
+			<a href="https://discord.gg/BHDEbWbGNg" class="item forums">
 			<div>
 				<img src="img/forums.png" alt="Minecraft forums icon" class="img">
 				<p class="subtitle">Chat With Us</p>
@@ -40,7 +40,7 @@
 			</a>
 
 			<!-- Replace # with your store URL -->
-			<a href="https://www.google.com" class="item store">
+			<a href="https://store.insaannetwork.ga/" class="item store">
 			<div>
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
 				<p class="subtitle">Buy Items/Ranks</p>
