--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 			<!-- Replace play.cubecraft.net with your server IP address -->
 			<!-- Do it on both line 66 and line 67 -->
 			<!-- Please set both your IP and port -->
-			<p>Join With <span class="sip" data-ip="mc.insaannetwork.cf" data-port="30023">
-			</span> And Play On <span class="ip">mc.insaannetwork.cf</span></p>
+			<p>Join With <span class="sip" data-ip="mc.insaannetwork.ga" data-port="30023">
+			</span> And Play On <span class="ip">mc.insaannetwork.ga</span></p>
 		</div>
 	</div>
 
