--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</a>
 
 			<!-- Replace # with your vote URL -->
-			<a href="" class="item vote">
+			<a href="https://www.youtube.com/channel/UC8_8l5yH3FzhyWXZhCywOlg" class="item vote" target="_blank">
 			<div>
 				<img src="img/vote.png" alt="Minecraft voting icon" class="img">
 				<p class="subtitle">Support Us</p>
