--- a/soon.html
+++ b/soon.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<title>Maiyo</title>
+<title>Insaan Network</title>
 <link rel="shortcut icon" href="maiyo.jpg" type="image/x-icon">
 </head>
 <body background="bg.jpg" alink="aqua" vlink="aqua">
