--- a/soon.html
+++ b/soon.html
@@ -6,10 +6,10 @@
 </head>
 <body background="bg.jpg" alink="aqua" vlink="aqua">
     <center>
-        <h1 style="margin-top: 300px; font-family: monospace; color: aqua;">Server error | 500</h1>
+        <h1 style="margin-top: 300px; font-family: monospace; color: aqua;">Maintenance Mode</h1>
     </center>
     <center>
-        <P style="margin-top:200px; font-family: monospace; color: aqua;"> <font size=5>Powered by <a href="https://shreyash.sytes.net/">Shreyash</a></font> </P>
+        <P style="margin-top:200px; font-family: monospace; color: aqua;"> <font size=5>Powered by <a href="https://web.insaannetwork.ga/">Insaan Network</a></font> </P>
     </center>
 
 
