--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
 	<title>Insaan Network!</title>
-	<meta name="Insaan Network!" content="The First Season Of Insaan Network Is Out! Join Now! : mc.insaannetwork.cf">
+	<meta name="Insaan Network!" content="The First Season Of Insaan Network Is Out! Join Now! : mc.insaannetwork.ga">
 	<meta property="og:title" content="Insaan Network - Best Minecraft Server">
 	<meta property="og:site_name" content="Insaan Network">
-	<meta property="og:description" content="The First Season Of Insaan Network Is Out! Join Now! : mc.insaannetwork.cf">
+	<meta property="og:description" content="The First Season Of Insaan Network Is Out! Join Now! : mc.insaannetwork.ga">
 	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
 	<meta property="og:url" content="https://bybilly.uk/">
 	<meta name="twitter:card" content="summary_large_image">
