--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
-	<title>Insaan Network!</title>
-	<meta name="Insaan Network!" content="The First Season Of Insaan Network Is Out! Join Now! : mc.insaannetwork.ga">
+	<title>Gateway Network!</title>
+	<meta name="Gateway Network!" content="The First Season Of Gateway Network Is Out! Join Now! : mc.gatewaynetwork.tk">
 	<meta property="og:title" content="Insaan Network - Best Minecraft Server">
 	<meta property="og:site_name" content="Insaan Network">
-	<meta property="og:description" content="The First Season Of Insaan Network Is Out! Join Now! : mc.insaannetwork.ga">
-	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
-	<meta property="og:url" content="https://bybilly.uk/">
+	<meta property="og:description" content="The First Season Of Gateway Network Is Out! Join Now! : mc.gatewaynetwork.tk">
+	<meta property="og:image" content="">
+	<meta property="og:url" content="">
 	<meta name="twitter:card" content="summary_large_image">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,8 +63,8 @@
 			<!-- Replace play.cubecraft.net with your server IP address -->
 			<!-- Do it on both line 66 and line 67 -->
 			<!-- Please set both your IP and port -->
-			<p>Join With <span class="sip" data-ip="mc.insaannetwork.ga" data-port="30023">
-			</span> And Play On <span class="ip">mc.insaannetwork.ga</span></p>
+			<p>Join With <span class="sip" data-ip="mc.gatewaynetwork.tk" data-port="25565">
+			</span> And Play On <span class="ip">mc.gatewaynetwork.tk</span></p>
 		</div>
 	</div>
 
