--- a/soon.html
+++ b/soon.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-<title>Insaan Network</title>
+<title>Gateway Network</title>
 <link rel="shortcut icon" href="maiyo.jpg" type="image/x-icon">
 </head>
 <body background="bg.jpg" alink="aqua" vlink="aqua">
@@ -9,7 +9,7 @@
         <h1 style="margin-top: 300px; font-family: monospace; color: aqua;">Maintenance Mode</h1>
     </center>
     <center>
-        <P style="margin-top:200px; font-family: monospace; color: aqua;"> <font size=5>Powered by <a href="https://web.insaannetwork.ga/">Insaan Network</a></font> </P>
+        <P style="margin-top:200px; font-family: monospace; color: aqua;"> <font size=5>Powered by <a href="https://web.gatewaynetwork.tk/">Gateway Network</a></font> </P>
     </center>
 </body>
 
