--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<!-- Info meta tags, important for social media + SEO -->
 	<title>Gateway Network!</title>
 	<meta name="Gateway Network!" content="The First Season Of Gateway Network Is Out! Join Now! : mc.gatewaynetwork.tk">
-	<meta property="og:title" content="Insaan Network - Best Minecraft Server">
-	<meta property="og:site_name" content="Insaan Network">
+	<meta property="og:title" content="Gateway Network - Best Minecraft Server">
+	<meta property="og:site_name" content="Gateway Network">
 	<meta property="og:description" content="The First Season Of Gateway Network Is Out! Join Now! : mc.gatewaynetwork.tk">
 	<meta property="og:image" content="">
 	<meta property="og:url" content="">
