--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</a>
 
 			<!-- Replace # with your store URL -->
-			<a href="/store/index.html" class="item store">
+			<a href="/store" class="item store">
 			<div>
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
 				<p class="subtitle">Buy Items/Ranks</p>
