--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		<div class="logo">
 			<!-- In the img folder, upload your logo -->
 			<!-- Make sure you name it 'logo.png' or update the code below -->
-			<img src="img/pog.png" alt="Nice" width="100" height="100" >
+			<center><font face="Comic Sans MS" size=100>Gateway Network!</font></center>
+			<img src="" alt="Nice" width="100" height="100" >
 		</div>
 
 		<div class="items">
