--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<!-- In the img folder, upload your logo -->
 			<!-- Make sure you name it 'logo.png' or update the code below -->
 			<center><font face="Comic Sans MS" size=100></font></center>
-			<img src="/img/pog.png" alt="Nice" width="100" height="100" >
+			<img src="pog.png" alt="Nice" width="100" height="100" >
 		</div>
 
 		<div class="items">
