--- a/store/index.html
+++ b/store/index.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 <title>Gateway Network</title>
+    <meta name="Gateway Network!" content="The First Season Of Gateway Network Is Out! Join Now! : mc.gatewaynetwork.tk">
+	<meta property="og:title" content="Gateway Network - Official Store">
+	<meta property="og:site_name" content="Gateway Network">
+	<meta property="og:description" content="Official Store of Gateway Network">
 <link rel="shortcut icon" href="maiyo.jpg" type="image/x-icon">
 </head>
 <body background="bg.jpg" alink="aqua" vlink="aqua">
